# 746-hfp-conversion

./: .gitignore  CMakeLists.txt  Makefile  README.md  audio.c  bt.c  bt_a2dp_sink.c  bt_audio.c  bt_audio.h  btstack_config.h  dac.c  dac.h  dac_audio.c  dac_audio.h  dialer.c  dialer.h  hfp_746.c  ringer.c  ringer.h  sdkconfig  sdkconfig.old  sinewave-generator.js  utils.c  utils.h
esp32/main/: CMakeLists.txt  adc_test.c  bt.c  dac_audio.c  main.c  spi_dac_audio.c
hw/3d-prints/enclosure/: enclosure.20231007-205651.FCBak  enclosure.FCStd
hw/3d-prints/header-pin-connector-housing/: header-pin-connector-housing.FCStd  header-pin-connector-housing.FCStd1
hw/3d-prints/pcb-holes-template/: pcb-holes.stl
hw/3d-prints/pcb-routing-template/: pcb-routing-template.FCStd
hw/3d-prints/strain-relief/: connector-strain-relief.FCStd
hw/746-hfp-control-board-kicad/: 746-hfp-control-board-kicad.csv  746-hfp-control-board-kicad.kicad_pcb  746-hfp-control-board-kicad.kicad_prl  746-hfp-control-board-kicad.kicad_pro  746-hfp-control-board-kicad.kicad_sch  746-hfp-control-board-kicad.xml
hw/746-hfp-kicad/: 746-hfp-kicad.csv  746-hfp-kicad.kicad_prl  746-hfp-kicad.kicad_pro  746-hfp-kicad.kicad_sch  746-hfp-kicad.xml  GPO-746-bt-control-board.kicad_sch  fp-info-cache  ~746-hfp-kicad.kicad_sch.lck
hw/746-hfp-main-board-kicad/: 746-hfp-main-board-kicad.csv  746-hfp-main-board-kicad.kicad_pcb  746-hfp-main-board-kicad.kicad_prl  746-hfp-main-board-kicad.kicad_pro  746-hfp-main-board-kicad.kicad_sch  746-hfp-main-board-kicad.xml  GPO-746-bt-control-board.kicad_sch  fp-info-cache
hw/header-pin-connector-housing/: header-pin-connector-housing-Body.stl
hw/strain-relief/: connector-strain-relief-BodySketch001.stl  connector-strain-relief.FCStd1
main/: CMakeLists.txt  adc_audio.c  adc_audio.h  bt.c  bt.h  dac_audio.c  dac_audio.h  dac_test.c  dialer.c  dialer.h  main.c  ringer.c  ringer.h  sine_16000_666.h  sine_8000_666.h  spi_dac_audio.c
pico/: CMakeLists.txt  Makefile  __adc.c  adc.c  adc.h  adc_main.c
src/esp32/: sdkconfig  sdkconfig.old
src/esp32/main/: CMakeLists.txt  adc_audio.c  adc_audio.h  adc_test.c  audio.c  audio.h  audio_test.c  bt.c  bt.h  bt_state_led.c  bt_state_led.h  dac_audio.c  dac_audio.h  dialer.c  main.c  ringer.c  sample_rate.h
src/pico/: CMakeLists.txt  Makefile  adc.c  adc.h  adc_main.c  audio.c  audio.h  audio_main.c  debug.h  pico-install.sh.template
